# avr_proj_template

./: README.md  main.c  uartcom.c
cmake/: CMakeLists.txt
make/: Makefile
